declarative-review/overlays/test/patch-replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exoplanets
spec:
  replicas: 1
