declarative-review/overlays/test/patch-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: exoplanets
  name: exoplanets
spec:
  host: "exoplanets-exoplanet.apps.ocp4.example.com"
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: exoplanets
